--- a/templates/currentuser.html
+++ b/templates/currentuser.html
@@ -18,7 +18,7 @@ DVT&C Inventory
 
     <div class="container">
 
-      <form class="form-signin" method="GET" action="/currentuser">
+      <form class="form-signin" method="GET" action="{{ url_for('currentuser') }}">
         <h2 class="form-signin-heading">Enter Your Badge</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.badge) }}
