--- a/templates/editdevice.html
+++ b/templates/editdevice.html
@@ -19,7 +19,7 @@ Edit Device Info
 
 <div class="container">
 
-  <form class="form-signin" method="POST" action="/editdevice">
+  <form class="form-signin" method="POST" action="{{ url_for('editdevice') }}">
     <h2 class="form-signin-heading">Edit Device Data</h2>
     {{ form.hidden_tag() }}
     <l1> Editing Device: {{ form.MEID.data }}</l1>
