--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@ DVT&C Inventory
         <li><h3>{{ message }}</h3></li>
     {% endif %}
 
-      <form class="form-signin" method="POST" action="/">
+      <form class="form-signin" method="POST" action="{{ url_for('index') }}">
         <h2 class="form-signin-heading">Enter Your Badge</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.badge) }}
