--- a/templates/login.html
+++ b/templates/login.html
@@ -22,7 +22,7 @@ Login
         <b>{{ message }}</b>
     {% endif %}
 
-      <form class="form-signin" method="POST" action="/login">
+      <form class="form-signin" method="POST" action="{{ url_for('login') }}">
         <h2 class="form-signin-heading">Log In</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.username) }}
