--- a/templates/meid.html
+++ b/templates/meid.html
@@ -19,7 +19,7 @@ Device Entry
 
     <div class="container">
     <b>Taking Device: {{ name }} </b>
-      <form class="form-signin" method="POST" action="/meid">
+      <form class="form-signin" method="POST" action="{{ url_for('meid') }}">
         <h2 class="form-signin-heading">Enter Device MEID</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.meid) }}
