--- a/templates/meidedit.html
+++ b/templates/meidedit.html
@@ -19,7 +19,7 @@ Device MEID to Edit
 
     <div class="container">
 
-      <form class="form-signin" method="POST" action="/meidedit">
+      <form class="form-signin" method="POST" action="{{ url_for('meidedit') }}">
         <h2 class="form-signin-heading">Enter Device MEID to Edit</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.meid) }}
