--- a/templates/newdevice.html
+++ b/templates/newdevice.html
@@ -19,7 +19,7 @@ New Device
 
 <div class="container">
 
-  <form class="form-signin" method="POST" action="/newdevice">
+  <form class="form-signin" method="POST" action="{{ url_for('newdevice') }}">
     <h2 class="form-signin-heading">New Device Entry</h2>
     {{ form.hidden_tag() }}
     {{ wtf.form_field(form.MEID) }}
