--- a/templates/newpass.html
+++ b/templates/newpass.html
@@ -24,7 +24,7 @@ Login
         <li><b>{{ message }}</b></li>
         {% endif %}
 
-      <form class="form-signin" method="POST" action="/newpass">
+      <form class="form-signin" method="POST" action="{{ url_for('newpass') }}">
         <h2 class="form-signin-heading">Change Password For:</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.account) }}
