--- a/templates/overdue.html
+++ b/templates/overdue.html
@@ -19,7 +19,7 @@ Overdue Device Report
 
     <div class="container">
     <b> {{ message }} </b>
-      <form class="form-signin" method="POST" action="/overdue">
+      <form class="form-signin" method="POST" action="{{ url_for('overdue') }}">
         <h2 class="form-signin-heading">Enter Time Delta</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.timeframe) }}
