--- a/templates/signup.html
+++ b/templates/signup.html
@@ -19,7 +19,7 @@ Sign Up
 
 <div class="container">
     {{ flasher }}
-  <form class="form-signin" method="POST" action="/newperson">
+  <form class="form-signin" method="POST" action="{{ url_for('newperson') }}">
     <h2 class="form-signin-heading">Sign Up</h2>
     {{ form.hidden_tag() }}
     {{ wtf.form_field(form.username) }}
