--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ DVT&C Inventory
     {% endif %}
 
       <form class="form-signin" method="POST" action="{{ url_for('index') }}">
-        <h2 class="form-signin-heading">Enter Your Badge</h2>
+        <h2 class="form-signin-heading">Enter Your Badge, motherfucker</h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.badge) }}
 
