--- a/templates/index.html
+++ b/templates/index.html
@@ -23,11 +23,11 @@ DVT&C Inventory
     {% endif %}
 
       <form class="form-signin" method="POST" action="{{ url_for('index') }}">
-        <h2 class="form-signin-heading">Enter Your Badge, please</h2>
+        <h2 class="form-signin-heading">Enter the Badge of Receiver </h2>
         {{ form.hidden_tag() }}
         {{ wtf.form_field(form.badge) }}
 
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Enter Badge</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Enter</button>
       </form>
     </div> <!-- /container -->
 {% endblock %}
