--- a/templates/admin.html
+++ b/templates/admin.html
@@ -26,6 +26,7 @@ Administration
     <li>  - </li>
     <li><strong><a href="{{ url_for('oemreport') }}">email {{ name }} an OEM report</a></strong></li>
     <li><strong><a href="{{ url_for('overdue') }}">email {{ name }} 'devices overdue' report </a></strong></li>
+    <li><strong><a href="{{ url_for('mailtest') }}">email {{ name }} 'a test email' report </a></strong></li>
     <li>  - </li>
     <li><strong><a href="{{ url_for('newperson') }}">Add New Regular Users and Admins</a></strong></li>
     <li><strong><a href="{{ url_for('newpass') }}">Change a Password for {{ name }} or a regular user</a></strong></li>
