--- a/templates/admin.html
+++ b/templates/admin.html
@@ -23,14 +23,15 @@ Administration
 
     <li><strong><a href="{{ url_for('newdevice') }}">Add New Devices to {{ name }}'s control</a></strong></li>
     <li><strong><a href="{{ url_for('meidedit') }}">Edit/View a Device (using meid)</a></strong></li>
+    <li><strong><a href="{{ url_for('history') }}">Ownership History (using meid)</a></strong></li>
     <li>  - </li>
     <li><strong><a href="{{ url_for('oemreport') }}">email {{ name }} an OEM report</a></strong></li>
     <li><strong><a href="{{ url_for('overdue') }}">email {{ name }} 'devices overdue' report </a></strong></li>
-    <li><strong><a href="{{ url_for('mailtest') }}">email {{ name }} 'a test email' report </a></strong></li>
     <li>  - </li>
     <li><strong><a href="{{ url_for('people') }}">See All the People with Badges </a> </strong></li>
-    <li><strong><a href="{{ url_for('newperson') }}">Add New Regular Users and Admins</a></strong></li>
-    <li><strong><a href="{{ url_for('newpass') }}">Change a Password for {{ name }} or a regular user</a></strong></li>
+    <li><strong><a href="{{ url_for('newperson') }}">Add New Users</a></strong></li>
+    <li><strong><a href="{{ url_for('newpass') }}">Change a Password </a></strong></li>
+    <li>  - </li>
     <li><strong><a href="{{ url_for('logout') }}">Log Out of Administrator Mode</a></strong></li>
 </div> <!-- /container -->
 {% endblock %}
