add MEID to editable stuff

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -24,6 +24,7 @@ Administration
     <li><strong><a href="{{ url_for('newdevice') }}">Add New Devices to {{ name }}'s control</a></strong></li>
     <li><strong><a href="{{ url_for('meidedit') }}">Edit/View a Device (using meid)</a></strong></li>
     <li><strong><a href="{{ url_for('history') }}">Ownership History (using meid)</a></strong></li>
+    <li><strong><a href="{{ url_for('checkouts') }}">Who Has What? (by badge)</a></strong></li>
     <li>  - </li>
     <li><strong><a href="{{ url_for('oemreport') }}">email {{ name }} an OEM report</a></strong></li>
     <li><strong><a href="{{ url_for('overdue') }}">email {{ name }} 'devices overdue' report </a></strong></li>
