--- a/templates/checkouts.html
+++ b/templates/checkouts.html
@@ -26,6 +26,8 @@ Who Has What
 
     <button class="btn btn-lg btn-primary btn-block" type="submit"> Discover </button>
   </form>
+    <br>
+    <b> {{ user }} has devices: </b><br>
 
     {{ records }}
 
