make badge list available

--- a/templates/checkouts.html
+++ b/templates/checkouts.html
@@ -27,7 +27,7 @@ Who Has What
     <button class="btn btn-lg btn-primary btn-block" type="submit"> Discover </button>
   </form>
     <br>
-    <b> {{ user }} has devices: </b><br>
+    <b> {{ user }} has: </b><br>
 
     {{ records }}
 
