--- a/templates/admin.html
+++ b/templates/admin.html
@@ -19,20 +19,26 @@ Administration
 
 <div class="container">
     <b>Admin User: {{ name }} </b>
-    <li>  -  </li>
+    <br>
 
-    <li><strong><a href="{{ url_for('newdevice') }}">Add New Devices to {{ name }}'s control</a></strong></li>
-    <li><strong><a href="{{ url_for('meidedit') }}">Edit/View a Device (using meid)</a></strong></li>
-    <li><strong><a href="{{ url_for('history') }}">Ownership History (using meid)</a></strong></li>
-    <li><strong><a href="{{ url_for('checkouts') }}">Who Has What? (by badge)</a></strong></li>
-    <li>  - </li>
-    <li><strong><a href="{{ url_for('oemreport') }}">email {{ name }} an OEM report</a></strong></li>
-    <li><strong><a href="{{ url_for('overdue') }}">email {{ name }} 'devices overdue' report </a></strong></li>
-    <li>  - </li>
-    <li><strong><a href="{{ url_for('people') }}">See All the People with Badges </a> </strong></li>
-    <li><strong><a href="{{ url_for('newperson') }}">Add New Users</a></strong></li>
-    <li><strong><a href="{{ url_for('newpass') }}">Change a Password </a></strong></li>
-    <li>  - </li>
-    <li><strong><a href="{{ url_for('logout') }}">Log Out of Administrator Mode</a></strong></li>
+    <b><a href="{{ url_for('newdevice') }}">Add New Devices to {{ name }}'s control</a></b><br>
+    <b><strong><a href="{{ url_for('meidedit') }}">Edit/View a Device (using meid)</a></strong></b><br>
+    <b><strong><a href="{{ url_for('history') }}">Ownership History (using meid)</a></strong></b><br>
+    <b><strong><a href="{{ url_for('checkouts') }}">Who Has What? (by badge)</a></strong></b><br>
+    <br>
+    <b><strong><a href="{{ url_for('oemreport') }}">email {{ name }} an OEM report</a></strong></b><br>
+    <b><strong><a href="{{ url_for('overdue') }}">email {{ name }} 'devices overdue' report </a></strong></b><br>
+    <br>
+    <b><strong><a href="{{ url_for('people') }}">See All the People with Badges </a> </strong></b><br>
+    <b><strong><a href="{{ url_for('newperson') }}">Add New Users</a></strong></b><br>
+    <b><strong><a href="{{ url_for('newpass') }}">Change a Password </a></strong></b><br>
+    <br>
+    <b><strong><a href="{{ url_for('logout') }}">Log Out of Administrator Mode</a></strong></b><br>
+    <br>
+    <br>
+    <li> Current Badge Holders: </li><br>
+    {{ table }}
 </div> <!-- /container -->
+
+
 {% endblock %}
