--- a/templates/meid.html
+++ b/templates/meid.html
@@ -26,6 +26,11 @@ Device Entry
           {{ wtf.form_field(form.meid3) }}
           {{ wtf.form_field(form.meid4) }}
           {{ wtf.form_field(form.meid5) }}
+          {{ wtf.form_field(form.meid6) }}
+          {{ wtf.form_field(form.meid7) }}
+          {{ wtf.form_field(form.meid8) }}
+          {{ wtf.form_field(form.meid9) }}
+          {{ wtf.form_field(form.meid10) }}
 
         <button class="btn btn-lg btn-primary btn-block" type="submit">Transfer MEID(s)</button>
       </form>
